--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: #ffffff;
+            background: #000000ba;
             /* background: rgb(0, 66, 111, 40); */
         }
 
@@ -44,6 +44,9 @@
             .zine-page img {
                 width: 100vw;
                 height: auto;
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
             }
         }
     </style>
