--- a/index.html
+++ b/index.html
@@ -43,14 +43,21 @@
         @media (max-width: 600px) {
             .zine-viewer {
                 overflow-y: hidden;
+                height: 100vh;
+                align-items: center;
+            }
+
+            .zine-page {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100vw;
             }
 
             .zine-page img {
-                width: 100vw;
+                max-width: 100vw;
+                max-height: 100vh;
                 height: auto;
-                position: relative;
-                top: 50%;
-                transform: translateY(-50%);
                 object-fit: contain;
             }
         }
