--- a/index.html
+++ b/index.html
@@ -42,23 +42,16 @@
 
         @media (max-width: 600px) {
             .zine-viewer {
-                overflow-y: hidden;
                 height: 100vh;
-                align-items: center;
             }
 
             .zine-page {
-                display: flex;
-                align-items: center;
-                justify-content: center;
                 width: 100vw;
             }
 
             .zine-page img {
-                max-width: 100vw;
-                max-height: 100vh;
+                max-width: 100%;
                 height: auto;
-                object-fit: contain;
             }
         }
     </style>
